--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		
 		<p>To demonstrate the RFMTC marketing model (a modified version of RFM), this study adopted the donor database of Blood Transfusion Service Center in Hsin-Chu City in Taiwan. The center passes their blood transfusion service bus to one university in Hsin-Chu City to gather blood donated about every three months. To build a FRMTC model, we selected 748 donors at random from the donor database. These 748 donor data, each one included R (Recency - months since last donation), F (Frequency - total number of donation), M (Monetary - total blood donated in c.c.), T (Time - months since first donation), and a binary variable representing whether he/she donated blood in March 2007 (1 stand for donating blood; 0 stands for not donating blood).</p>
 
-		<p class="Test"> The following image below is generated using a logarithmic regression model. In order to properly execute the visualization, the user needs to specify a preprocessing method and hyper parameter C. The preprocessing methods considered are Standardization and Min-Max Scale. If input inproperly the default is none. For Hyperparameter C, the model expects float format such as 0.01 and 1.00.</p>
+		<p class="Test"> The following image below is generated using a logarithmic regression model. In order to properly execute the visualization, the user needs to specify a preprocessing method and hyper parameter C. The preprocessing methods considered are Standardization and Min-Max Scale. If input inproperly the default is none. For Hyperparameter C, the model expects float format such as 0.01 and 1.00. Make sure to include 0 for values less than 1(0.1 will run but not .1) . </p>
 
 		<select id="preprocessing">
 		  <option value="standardize">Standardize</option>
